# CAP6412-SafeLLaVA-G6

./: README.md  future_datasets.md  hello.py  install-local.sh  pyproject.toml
notebooks/: Adam Regex.ipynb
src/safellava/: dataset_fabrication.py  datasets.py  interfaces.py  models.py  privacy_dataset.py  tuning.py  tuning_models.py  utils.py
src/safellava/dataset/: dataset_fabrication.py  privacy_dataset.py
src/safellava/evaluation/: evaluation.py
src/safellava/models/: api_models.py  less_performing_models.py  models.py  models_of_unknown_quality.py
src/safellava/tuning/: modelscope_tuning.py  trl_tuning.py
