[project]
name = "cap6412-safellava-g6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Da-Emp66", email = "asherbean10@gmail.com" },
    { name = "Adam Sachs", email = "ad884164@ucf.edu" },
    { name = "John Benjamin", email = "jo713015@ucf.edu" },
    { name = "Zena Himes", email = "ze610105@ucf.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.3.0",
    "bitsandbytes>=0.45.0",
    # "flash-attn>=2.7.3",
    "maturin>=1.8.1",
    "opencv-python>=4.11.0.86",
    "optimum-quanto>=0.2.6",
    "pillow>=11.1.0",
    "quanto>=0.2.0",
    "scikit-learn>=1.2.2",
    "setuptools>=69.5.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.48.0",
    # "llava==1.2.2.post1",
    "diffusers>=0.32.2",
    "scipy>=1.15.1",
    "safetensors>=0.5.2",
    "xformers>=0.0.29.post1",
    "datasets>=3.3.2",
    "pytube>=15.0.0",
    "kagglehub>=0.3.10",
    "ms-swift>=3.2.1",
    "qwen-vl-utils>=0.0.10",
    # "gptqmodel",
    # "auto_gptq",
    "addict>=2.4.0",
    "pytubefix>=8.12.2",
    "deepspeed>=0.16.4",
    "pyautogui>=0.9.54",
    "python-xlib>=0.33",
    "pydirectinput>=1.0.4",
    "moviepy>=1.0.3",
    "python-dotenv>=1.1.0",
    "openai>=1.67.0",
    "decord>=0.6.0",
    "yt-dlp>=2025.3.27",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
llava = { git = "https://github.com/haotian-liu/LLaVA.git" }
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
gptqmodel = { git = "https://github.com/ZX-ModelCloud/GPTQModel.git" }
# auto_gptq = { git = "https://github.com/YuzaChongyi/AutoGPTQ.git" }

# [[tool.uv.dependency-metadata]]
# name = "llava"
# version = "1.2.2.post1"
# requires-dist = []
